# blenderAI

./: .gitignore  CONTRIBUTING.fa.md  CONTRIBUTING.md  GUIDE.fa.md  GUIDE.md  README.fa.md  README.md
sidecar/: README.md  pyproject.toml
sidecar/blender_ai_sidecar/: __init__.py  app_log.py  auth.py  config.py  main.py
sidecar/blender_ai_sidecar/api/: __init__.py  routes.py
sidecar/blender_ai_sidecar/bridge/: __init__.py  protocol.py  python_guard.py  tool_args.py
sidecar/blender_ai_sidecar/chat/: __init__.py  agent.py  cancel.py  modeling_strategy.py  skill_router.py
sidecar/blender_ai_sidecar/context/: __init__.py
sidecar/blender_ai_sidecar/contracts/: __init__.py
sidecar/blender_ai_sidecar/knowledge/: __init__.py
sidecar/blender_ai_sidecar/learning/: __init__.py  engine.py
sidecar/blender_ai_sidecar/mcp/: __init__.py  proxy.py  server.py
sidecar/evals/: __init__.py  cases.yaml
sidecar/tests/: test_adaptive_layer.py  test_agent_followup.py  test_agent_history.py  test_agent_multistep.py  test_auth_policy.py  test_bridge_owner.py  test_capabilities.py  test_chats_clear.py  test_evals.py  test_extension_layout.py  test_knowledge.py  test_learning.py  test_learning_api.py  test_logs.py  test_mcp_prepare.py  test_mcp_proxy.py  test_mcp_server.py  test_mesh_extrude.py  test_mesh_from_data_skill.py  test_mesh_select_semantic.py  test_modeling_strategy.py  test_primitive_guardrail.py  test_providers.py  test_python_guard.py  test_skill_routing.py  test_skill_schema.py  test_skills.py  test_tool_args.py  test_tool_registry_sync.py  test_workflows.py
(+177 files in other folders)
