[project]
name = "blender-ai-sidecar"
version = "1.0.2"
description = "Local AI/MCP sidecar for BlenderAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.2",
  "aiosqlite>=0.20.0",
  "keyring>=25.0.0",
  "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "anyio>=4.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
blender-ai-sidecar = "blender_ai_sidecar.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["blender_ai_sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
